# HomeWork_32.5.2

./: CMakeLists.txt  cinemas.json  main.cpp
